--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -1,73 +1,83 @@
 pipeline {
-agent {
-  docker {
-    image 'maven:3.9.6-eclipse-temurin-17'
-    args '-v /var/run/docker.sock:/var/run/docker.sock -u root'
-    reuseNode true
-  }
-}
+  agent any
+
   stages {
+
     stage('Checkout') {
       steps {
-        sh 'echo passed'
-        //git branch: 'main', url: 'https://github.com/iam-veeramalla/Jenkins-Zero-To-Hero.git'
+        checkout scm
       }
     }
-stage('Build and Test') {
-    steps {
-        script {
-            docker.image('maven:3.9.6-eclipse-temurin-17').inside {
-                sh '''
-                  cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
-                  mvn clean package
-                '''
-            }
+
+    stage('Build and Test') {
+      agent {
+        docker {
+          image 'maven:3.9.6-eclipse-temurin-17'
+          args '-u root'
         }
+      }
+      steps {
+        sh '''
+          cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
+          mvn clean package
+        '''
+      }
     }
-}
+
     stage('Static Code Analysis') {
+      agent {
+        docker {
+          image 'maven:3.9.6-eclipse-temurin-17'
+          args '-u root'
+        }
+      }
       environment {
         SONAR_URL = "http://16.170.233.220:9000"
       }
       steps {
         withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
-          sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && mvn sonar:sonar -Dsonar.login=$SONAR_AUTH_TOKEN -Dsonar.host.url=${SONAR_URL}'
+          sh '''
+            cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
+            mvn sonar:sonar \
+              -Dsonar.login=$SONAR_AUTH_TOKEN \
+              -Dsonar.host.url=${SONAR_URL}
+          '''
         }
       }
     }
+
     stage('Build and Push Docker Image') {
       environment {
         DOCKER_IMAGE = "eklavya2117/ultimate-cicd:${BUILD_NUMBER}"
-        // DOCKERFILE_LOCATION = "java-maven-sonar-argocd-helm-k8s/spring-boot-app/Dockerfile"
-        REGISTRY_CREDENTIALS = credentials('docker-cred')
       }
       steps {
-        script {
-            sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && docker build -t ${DOCKER_IMAGE} .'
-            def dockerImage = docker.image("${DOCKER_IMAGE}")
-            docker.withRegistry('https://index.docker.io/v1/', "docker-cred") {
-                dockerImage.push()
-            }
+        sh '''
+          cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
+          docker build -t ${DOCKER_IMAGE} .
+        '''
+
+        docker.withRegistry('https://index.docker.io/v1/', 'docker-cred') {
+          sh 'docker push ${DOCKER_IMAGE}'
         }
       }
     }
-stage('Update Deployment File') {
-    steps {
+
+    stage('Update Deployment File') {
+      steps {
         withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
-            sh '''
-              cd $WORKSPACE
-              git config user.email "chauhan.pravin.7112@gmail.com"
-              git config user.name "eklavya2117"
+          sh '''
+            git config user.email "chauhan.pravin.7112@gmail.com"
+            git config user.name "eklavya2117"
 
-              sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" \
-              java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+            sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" \
+            java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
 
-              git add .
-              git commit -m "Update image tag ${BUILD_NUMBER}"
-              git push https://${GITHUB_TOKEN}@github.com/eklavya2117/Jenkins-CICD-Pipeline.git HEAD:main
-            '''
+            git add .
+            git commit -m "Update image tag ${BUILD_NUMBER}" || true
+            git push https://${GITHUB_TOKEN}@github.com/eklavya2117/Jenkins-CICD-Pipeline.git HEAD:main
+          '''
         }
+      }
     }
-}
-}
+  }
 }
