--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -1,21 +1,26 @@
 pipeline {
-  agent any
+  agent {
+    docker {
+      image 'maven:3.9.6-eclipse-temurin-17'
+      args '-v /var/run/docker.sock:/var/run/docker.sock -u root'
+      reuseNode true
+    }
+  }
+
+  environment {
+    DOCKER_IMAGE = "eklavya2117/ultimate-cicd"
+    SONAR_URL    = "http://16.170.233.220:9000"
+  }
 
   stages {
 
     stage('Checkout') {
       steps {
-        checkout scm
+        echo 'Checkout completed'
       }
     }
 
     stage('Build and Test') {
-      agent {
-        docker {
-          image 'maven:3.9.6-eclipse-temurin-17'
-          args '-u root'
-        }
-      }
       steps {
         sh '''
           cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
@@ -25,39 +30,32 @@ pipeline {
     }
 
     stage('Static Code Analysis') {
-      agent {
-        docker {
-          image 'maven:3.9.6-eclipse-temurin-17'
-          args '-u root'
-        }
-      }
-      environment {
-        SONAR_URL = "http://16.170.233.220:9000"
-      }
       steps {
         withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
           sh '''
             cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
             mvn sonar:sonar \
               -Dsonar.login=$SONAR_AUTH_TOKEN \
-              -Dsonar.host.url=${SONAR_URL}
+              -Dsonar.host.url=$SONAR_URL
           '''
         }
       }
     }
 
     stage('Build and Push Docker Image') {
-      environment {
-        DOCKER_IMAGE = "eklavya2117/ultimate-cicd:${BUILD_NUMBER}"
-      }
       steps {
-        sh '''
-          cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
-          docker build -t ${DOCKER_IMAGE} .
-        '''
+        withCredentials([usernamePassword(
+          credentialsId: 'docker-cred',
+          usernameVariable: 'DOCKER_USER',
+          passwordVariable: 'DOCKER_PASS'
+        )]) {
+          sh '''
+            echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin
 
-        docker.withRegistry('https://index.docker.io/v1/', 'docker-cred') {
-          sh 'docker push ${DOCKER_IMAGE}'
+            cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
+            docker build -t ${DOCKER_IMAGE}:${BUILD_NUMBER} .
+            docker push ${DOCKER_IMAGE}:${BUILD_NUMBER}
+          '''
         }
       }
     }
@@ -70,14 +68,23 @@ pipeline {
             git config user.name "eklavya2117"
 
             sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" \
-            java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+              java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
 
             git add .
-            git commit -m "Update image tag ${BUILD_NUMBER}" || true
+            git commit -m "Update image tag ${BUILD_NUMBER}" || echo "No changes to commit"
             git push https://${GITHUB_TOKEN}@github.com/eklavya2117/Jenkins-CICD-Pipeline.git HEAD:main
           '''
         }
       }
+    }
+  }
+
+  post {
+    success {
+      echo "Pipeline completed successfully 🎉"
+    }
+    failure {
+      echo "Pipeline failed ❌"
     }
   }
 }
