--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -1,82 +1,75 @@
 pipeline {
-  agent none
-
-  environment {
-    DOCKER_IMAGE = "eklavya2117/ultimate-cicd"
-    SONAR_URL = "http://16.170.233.220:9000"
+agent {
+  docker {
+    image 'maven:3.9.6-eclipse-temurin-17'
+    args '-v /var/run/docker.sock:/var/run/docker.sock -u root'
+    reuseNode true
   }
-
+}
   stages {
-
-    stage('Build & Test (Maven Container)') {
-      agent {
-        docker {
-          image 'maven:3.9.6-eclipse-temurin-17'
-          reuseNode true
-        }
-      }
+    stage('Checkout') {
       steps {
-        sh '''
-          cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
-          mvn clean package
-        '''
+        sh 'echo passed'
+        //git branch: 'main', url: 'https://github.com/iam-veeramalla/Jenkins-Zero-To-Hero.git'
       }
     }
+    stage('Build and Test') {
+steps {
+    sh '''
 
-    stage('Sonar Analysis') {
-      agent {
-        docker {
-          image 'maven:3.9.6-eclipse-temurin-17'
-          reuseNode true
-        }
+      apt-get update
+      apt-get install -y docker.io
+
+      cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
+      rm -rf target || true
+      mvn clean package
+    '''
+  }
+}
+    stage('Static Code Analysis') {
+      environment {
+        SONAR_URL = "http://16.170.233.220:9000"
       }
       steps {
         withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
-          sh '''
-            cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
-            mvn sonar:sonar \
-              -Dsonar.login=$SONAR_AUTH_TOKEN \
-              -Dsonar.host.url=$SONAR_URL
-          '''
+          sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && mvn sonar:sonar -Dsonar.login=$SONAR_AUTH_TOKEN -Dsonar.host.url=${SONAR_URL}'
         }
       }
     }
-
-    stage('Build & Push Docker Image (HOST)') {
-      agent { label 'master' }   // or built-in
+    stage('Build and Push Docker Image') {
+      environment {
+        DOCKER_IMAGE = "eklavya2117/ultimate-cicd:${BUILD_NUMBER}"
+        // DOCKERFILE_LOCATION = "java-maven-sonar-argocd-helm-k8s/spring-boot-app/Dockerfile"
+        REGISTRY_CREDENTIALS = credentials('docker-cred')
+      }
       steps {
-        withCredentials([usernamePassword(
-          credentialsId: 'docker-cred',
-          usernameVariable: 'DOCKER_USER',
-          passwordVariable: 'DOCKER_PASS'
-        )]) {
-          sh '''
-            docker login -u "$DOCKER_USER" -p "$DOCKER_PASS"
-            cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
-            docker build -t ${DOCKER_IMAGE}:${BUILD_NUMBER} .
-            docker push ${DOCKER_IMAGE}:${BUILD_NUMBER}
-          '''
+        script {
+            sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && docker build -t ${DOCKER_IMAGE} .'
+            def dockerImage = docker.image("${DOCKER_IMAGE}")
+            docker.withRegistry('https://index.docker.io/v1/', "docker-cred") {
+                dockerImage.push()
+            }
         }
       }
     }
-
     stage('Update Deployment File') {
-      agent { label 'master' }
-      steps {
-        withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
-          sh '''
-            git config user.email "chauhan.pravin.7112@gmail.com"
-            git config user.name "eklavya2117"
-
-            sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" \
-              java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
-
-            git add .
-            git commit -m "Update image tag ${BUILD_NUMBER}" || true
-            git push https://${GITHUB_TOKEN}@github.com/eklavya2117/Jenkins-CICD-Pipeline.git HEAD:main
-          '''
+        environment {
+            GIT_REPO_NAME = "Jenkins-CICD-Pipeline"
+            GIT_USER_NAME = "eklavya2117"
         }
-      }
+        steps {
+            withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
+                sh '''
+                    git config user.email "chauhan.pravin.7112@gmail.com"
+                    git config user.name "eklavya2117"
+                    BUILD_NUMBER=${BUILD_NUMBER}
+                    sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+                    git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+                    git commit -m "Update deployment image to version ${BUILD_NUMBER}"
+                    git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
+                '''
+            }
+        }
     }
   }
 }
