--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -1,74 +1,91 @@
 pipeline {
-agent {
-  docker {
-    image 'maven:3.9.6-eclipse-temurin-17'
-    args '-v /var/run/docker.sock:/var/run/docker.sock -u root'
-    reuseNode true
-  }
-}
-  stages {
-stage('Checkout') {
-  steps {
-    checkout scm
-  }
-}
-stage('Build and Test') {
-steps {
-    sh '''
-
-      apt-get update
-      apt-get install -y docker.io
-
-      cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
-      rm -rf target || true
-      mvn clean package
-    '''
-  }
-}
-    stage('Static Code Analysis') {
-      environment {
-        SONAR_URL = "http://16.170.233.220:9000"
-      }
-      steps {
-        withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
-          sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && mvn sonar:sonar -Dsonar.login=$SONAR_AUTH_TOKEN -Dsonar.host.url=${SONAR_URL}'
+    agent {
+        docker {
+            image 'maven:3.9.6-eclipse-temurin-17'
+            args '-v /var/run/docker.sock:/var/run/docker.sock -u root'
+            reuseNode true
         }
-      }
     }
-    stage('Build and Push Docker Image') {
-      environment {
+
+    environment {
+        SONAR_URL = "http://16.170.233.220:9000"
         DOCKER_IMAGE = "eklavya2117/ultimate-cicd:${BUILD_NUMBER}"
-        // DOCKERFILE_LOCATION = "java-maven-sonar-argocd-helm-k8s/spring-boot-app/Dockerfile"
-        REGISTRY_CREDENTIALS = credentials('docker-cred')
-      }
-      steps {
-        script {
-            sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && docker build -t ${DOCKER_IMAGE} .'
-            def dockerImage = docker.image("${DOCKER_IMAGE}")
-            docker.withRegistry('https://index.docker.io/v1/', "docker-cred") {
-                dockerImage.push()
+        GIT_REPO_NAME = "Jenkins-CICD-Pipeline"
+        GIT_USER_NAME = "eklavya2117"
+    }
+
+    stages {
+
+        stage('Checkout') {
+            steps {
+                echo "Checkout stage passed"
+                checkout([$class: 'GitSCM',
+                          branches: [[name: 'main']],
+                          userRemoteConfigs: [[url: 'https://github.com/eklavya2117/Jenkins-CICD-Pipeline.git']]])
             }
         }
-      }
+
+        stage('Build and Test') {
+            steps {
+                sh '''
+                    cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
+                    rm -rf target || true
+                    mvn clean package
+                '''
+            }
+        }
+
+        stage('Static Code Analysis') {
+            steps {
+                withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
+                    sh '''
+                        cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
+                        mvn sonar:sonar -Dsonar.login=$SONAR_AUTH_TOKEN -Dsonar.host.url=${SONAR_URL}
+                    '''
+                }
+            }
+        }
+
+        stage('Build and Push Docker Image') {
+            steps {
+                withCredentials([usernamePassword(credentialsId: 'docker-cred', usernameVariable: 'DOCKER_USER', passwordVariable: 'DOCKER_PASS')]) {
+                    sh '''
+                        docker login -u $DOCKER_USER --password-stdin <<< $DOCKER_PASS
+                        cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
+                        docker build -t ${DOCKER_IMAGE} .
+                        docker push ${DOCKER_IMAGE}
+                    '''
+                }
+            }
+        }
+
+        stage('Update Deployment File') {
+            agent { label 'jenkins-host' } // Run on Jenkins host, not Docker
+            steps {
+                withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
+                    sh '''
+                        git config user.email "chauhan.pravin.7112@gmail.com"
+                        git config user.name "eklavya2117"
+
+                        sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" \
+                            java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+
+                        git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+                        git commit -m "Update deployment image to version ${BUILD_NUMBER}" || echo "No changes to commit"
+                        git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME}.git HEAD:main
+                    '''
+                }
+            }
+        }
+
+    } // stages
+
+    post {
+        success {
+            echo "Pipeline succeeded ✅"
+        }
+        failure {
+            echo "Pipeline failed ❌"
+        }
     }
-stage('Update Deployment File') {
-  steps {
-    withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
-      sh '''
-        apt-get update && apt-get install -y git
-
-        git config user.email "chauhan.pravin.7112@gmail.com"
-        git config user.name "eklavya2117"
-
-        sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" \
-        java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
-
-        git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
-        git commit -m "Update deployment image to version ${BUILD_NUMBER}"
-        git push https://${GITHUB_TOKEN}@github.com/eklavya2117/Jenkins-CICD-Pipeline.git HEAD:main
-      '''
-    }
-  }
-}
-}
 }
