--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -8,26 +8,23 @@ pipeline {
     }
 
     environment {
-        SONAR_URL = "http://16.170.233.220:9000"
         DOCKER_IMAGE = "eklavya2117/ultimate-cicd:${BUILD_NUMBER}"
+        SONAR_URL = "http://16.170.233.220:9000"
         GIT_REPO_NAME = "Jenkins-CICD-Pipeline"
         GIT_USER_NAME = "eklavya2117"
     }
 
     stages {
-
         stage('Checkout') {
             steps {
-                echo "Checkout stage passed"
-                checkout([$class: 'GitSCM',
-                          branches: [[name: 'main']],
-                          userRemoteConfigs: [[url: 'https://github.com/eklavya2117/Jenkins-CICD-Pipeline.git']]])
+                checkout scm
             }
         }
 
         stage('Build and Test') {
             steps {
                 sh '''
+                    apt-get update && apt-get install -y docker.io git
                     cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
                     rm -rf target || true
                     mvn clean package
@@ -50,7 +47,7 @@ pipeline {
             steps {
                 withCredentials([usernamePassword(credentialsId: 'docker-cred', usernameVariable: 'DOCKER_USER', passwordVariable: 'DOCKER_PASS')]) {
                     sh '''
-                        docker login -u $DOCKER_USER --password-stdin <<< $DOCKER_PASS
+                        echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
                         cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
                         docker build -t ${DOCKER_IMAGE} .
                         docker push ${DOCKER_IMAGE}
@@ -60,32 +57,25 @@ pipeline {
         }
 
         stage('Update Deployment File') {
-            agent { label 'jenkins-host' } // Run on Jenkins host, not Docker
             steps {
                 withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
                     sh '''
-                        git config user.email "chauhan.pravin.7112@gmail.com"
-                        git config user.name "eklavya2117"
+                        cd $WORKSPACE
+                        # Ensure we are in the git repo
+                        if [ -d ".git" ]; then
+                            git config user.email "chauhan.pravin.7112@gmail.com"
+                            git config user.name "${GIT_USER_NAME}"
 
-                        sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" \
-                            java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
-
-                        git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
-                        git commit -m "Update deployment image to version ${BUILD_NUMBER}" || echo "No changes to commit"
-                        git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME}.git HEAD:main
+                            sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+                            git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+                            git commit -m "Update deployment image to version ${BUILD_NUMBER}" || echo "No changes to commit"
+                            git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
+                        else
+                            echo "Not in a git repository. Skipping deployment file update."
+                        fi
                     '''
                 }
             }
-        }
-
-    } // stages
-
-    post {
-        success {
-            echo "Pipeline succeeded ✅"
-        }
-        failure {
-            echo "Pipeline failed ❌"
         }
     }
 }
