--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -8,8 +8,8 @@ pipeline {
     }
 
     environment {
-        DOCKER_IMAGE = "eklavya2117/ultimate-cicd:${BUILD_NUMBER}"
         SONAR_URL = "http://16.170.233.220:9000"
+        DOCKER_IMAGE = "eklavya2117/ultimate-cicd:${BUILD_NUMBER}"
         GIT_REPO_NAME = "Jenkins-CICD-Pipeline"
         GIT_USER_NAME = "eklavya2117"
     }
@@ -18,13 +18,13 @@ pipeline {
         stage('Checkout') {
             steps {
                 checkout scm
+                sh 'echo "Code checked out!"'
             }
         }
 
         stage('Build and Test') {
             steps {
                 sh '''
-                    apt-get update && apt-get install -y docker.io git
                     cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
                     rm -rf target || true
                     mvn clean package
@@ -45,37 +45,46 @@ pipeline {
 
         stage('Build and Push Docker Image') {
             steps {
-                withCredentials([usernamePassword(credentialsId: 'docker-cred', usernameVariable: 'DOCKER_USER', passwordVariable: 'DOCKER_PASS')]) {
+                script {
                     sh '''
-                        echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
                         cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
                         docker build -t ${DOCKER_IMAGE} .
-                        docker push ${DOCKER_IMAGE}
                     '''
+                    def dockerImage = docker.image("${DOCKER_IMAGE}")
+                    docker.withRegistry('https://index.docker.io/v1/', 'docker-cred') {
+                        dockerImage.push()
+                    }
                 }
             }
         }
 
         stage('Update Deployment File') {
+            agent any   // run on Jenkins host, not inside Docker
             steps {
                 withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
                     sh '''
                         cd $WORKSPACE
-                        # Ensure we are in the git repo
-                        if [ -d ".git" ]; then
-                            git config user.email "chauhan.pravin.7112@gmail.com"
-                            git config user.name "${GIT_USER_NAME}"
 
-                            sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
-                            git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
-                            git commit -m "Update deployment image to version ${BUILD_NUMBER}" || echo "No changes to commit"
-                            git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
-                        else
-                            echo "Not in a git repository. Skipping deployment file update."
-                        fi
+                        git config user.email "chauhan.pravin.7112@gmail.com"
+                        git config user.name "${GIT_USER_NAME}"
+
+                        sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+
+                        git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+                        git commit -m "Update deployment image to version ${BUILD_NUMBER}" || echo "No changes to commit"
+                        git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME}.git HEAD:main
                     '''
                 }
             }
+        }
+    }
+
+    post {
+        success {
+            echo "Pipeline finished successfully ✅"
+        }
+        failure {
+            echo "Pipeline failed ❌"
         }
     }
 }
